finished index.html

--- a/app/index.html
+++ b/app/index.html
@@ -527,18 +527,215 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="services-box swiper-slide"></div>
-                    <div class="services-box swiper-slide"></div>
-                    <div class="services-box swiper-slide"></div>
-                    <div class="services-box swiper-slide"></div> -->
                 </div>
             </div>
         </div>
     </section>
     <section class="price">
-        <div class="container"></div>
+        <div class="container price__wrap">
+            <div class="price-heading">
+                <h2 class="price-heading__title">Цены доступные каждому!</h2>
+                <div class="price-heading__text">
+                    <p>Выберите любой понравившейся вам тарифный план и протестируйте </p>
+                    <p>его бесплатно в течение 30 дней!</p>
+                </div>
+            </div>
+            <div class="price-main swiper-container">
+                <div class="price-main-wrap swiper-wrapper justify-c">
+                    <div class="price-main__rate swiper-slide">
+                        <div class="rate-heading rate-heading_free">Free</div>
+                        <div class="price-policy flex-cont justify-fe">
+                            <div class="price-policy__price">
+                                <span class="price-currency">€</span>
+                                <span class="price-digits">0</span>
+                            </div>
+                            <div class="price-policy__text">Forever</div>
+                        </div>
+                        <div class="price-description">
+                            Try any plan for 30 days for free 
+                            (no credit card required)
+                        </div>
+                        <div class="btn-wrap">
+                            <a href="#">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="price-main__rate swiper-slide">
+                        <div class="rate-heading  rate-heading_smart">Smart</div>
+                        <div class="price-policy flex-cont justify-fe">
+                            <div class="price-policy__price">
+                                <div class="price-rate">
+                                    <span class="price-rate__currency">€</span>
+                                    <span class="price-rate__digits">25 </span>
+                                    <span class="price-rate__month">/ month</span>
+                                </div>
+                                <div class="price-rate">
+                                    <span class="price-rate__currency">€</span>
+                                    <span class="price-rate__digits">250 </span>
+                                    <span class="price-rate__month">/ month</span>
+                                </div>
+                            </div>
+                            <div class="price-policy__text">Go yearly & save € 50</div>
+                        </div>
+                        <div class="price-description">
+                            Try any plan for 30 days for free 
+                            (no credit card required)
+                        </div>
+                        <div class="btn-wrap">
+                            <a href="#">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="price-main__rate swiper-slide">
+                        <div class="rate-heading  rate-heading_professional">Professional</div>
+                        <div class="price-policy flex-cont justify-fe">
+                            <div class="price-policy__price">
+                                <div class="price-rate">
+                                    <span class="price-rate__currency">€</span>
+                                    <span class="price-rate__digits">200 </span>
+                                    <span class="price-rate__month">/ month</span>
+                                </div>
+                                <div class="price-rate">
+                                    <span class="price-rate__currency">€</span>
+                                    <span class="price-rate__digits">2000 </span>
+                                    <span class="price-rate__month">/ month</span>
+                                </div>
+                            </div>
+                            <div class="price-policy__text">Go yearly & save € 400</div>
+                        </div>
+                        <div class="price-description">
+                            Try any plan for 30 days for free 
+                            (no credit card required)
+                        </div>
+                        <div class="btn-wrap">
+                            <a href="#">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="price-main__rate swiper-slide">
+                        <div class="rate-heading rate-heading_ultimate">Ultimate</div>
+                        <div class="price-policy flex-cont justify-fe">
+                            <div class="price-policy__price">
+                                <span class="price-client">VIP</span>
+                            </div>
+                            <div class="price-policy__text">Contact us</div>
+                        </div>
+                        <div class="price-description">
+                            Try any plan for 30 days for free 
+                            (no credit card required)
+                        </div>
+                        <div class="btn-wrap">
+                            <a href="#">Learn more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-    
+    <section class="registration">
+        <div class="container registration__wrap">
+            <div class="registration-content">
+                <div class="registration-content__wrap">
+                    <div class="registration-heading">
+                        <h2 class="registration-heading__text">Создайте аккаунт и начните работу сейчас</h2>
+                    </div>
+                    <div class="registration-main flex-cont justify-sb">
+                        <div class="registration-main__text">
+                            <p>Регистрируйтесь сейчас и получайте бонус - <strong>2.22 гривны на счет </strong></p>
+                            <p>для тестирования нашего сервиса!</p>
+                        </div>
+                        <div class="registration-main__btn">
+                            <a href="#" class="btn">Зарегистрироваться </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="footer-info">
+        <div class="container">
+            <div class="footer-info__wrap flex-cont justify-sb">
+                <div class="menu-info">
+                    <h3 class="menu-info__heading">Начать работу</h3>
+                    <ul class="menu-info__menu">
+                        <li class="menu-info-items">
+                            <a href="#">Создать бесплатный аккаунт</a>
+                        </li>
+                        <li class="menu-info-items">
+                            <a href="#">Войти в аккаунт</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="menu-info">
+                    <h3 class="menu-info__heading">Услуги</h3>
+                    <ul class="menu-info__menu">
+                        <li class="menu-info-items"><a href="#">SMS рассылка</a></li>
+                        <li class="menu-info-items"><a href="#">Формы подписки</a></li>
+                        <li class="menu-info-items"><a href="#">Менеджер контактов</a></li>
+                        <li class="menu-info-items"><a href="#">Короткие ссылки</a></li>
+                        <li class="menu-info-items"><a href="#">QR-коды</a></li>
+                    </ul>
+                </div>
+                <div class="menu-info">
+                    <h3 class="menu-info__heading">Инфо</h3>
+                    <ul class="menu-info__menu">
+                        <li class="menu-info-items"><a href="#">Вопросы и ответы</a></li>
+                        <li class="menu-info-items"><a href="#">Правила пользования</a></li>
+                        <li class="menu-info-items"><a href="#">Статьи</a></li>
+                        <li class="menu-info-items"><a href="#">Новости</a></li>
+                        <li class="menu-info-items"><a href="#">Документы</a></li>
+                    </ul>
+                </div>
+                <div class="menu-info">
+                    <h3 class="menu-info__heading">Образовательные ресурсы</h3>
+                    <ul class="menu-info__menu">
+                        <li class="menu-info-items"><a href="#">Видео уроки</a></li>
+                        <li class="menu-info-items"><a href="#">Справка пользователя</a></li>
+                    </ul>
+                </div>
+                <div class="menu-info">
+                    <h3 class="menu-info__heading">Свяжитесь с нами</h3>
+                    <ul class="menu-info__menu">
+                        <li class="menu-info-items">
+                            <a href="tel:+380666666666" class="phone">+38 (066) 666-66-66</a>
+                        </li>
+                        <li class="menu-info-items">
+                            <a href="mailto:team@mailigen.ru" class="mail">team@mailigen.ru</a>
+                        </li>
+                        <li class="menu-info-items">Waldstraße 32, 60528</li>
+                        <li class="menu-info-items">Frankfurt am Main, Germany</li>
+                        <li class="menu-info-items menu-info-items_sprites">
+                            <ul class="sprites-social">
+                                <li class="sprites-social__icon">
+                                    <a href="#"></a>
+                                </li>
+                                <li class="sprites-social__icon">
+                                    <a href="#"></a>
+                                </li>
+                                <li class="sprites-social__icon">
+                                    <a href="#"></a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="menu-info"></div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <div class="footer-wrap flex-cont justify-sb">
+                <div class="footer-wrap__box footer-wrap_copyright">
+                    © 2014-2017 Mobizon. Все права защищены. 
+                </div>
+                <div class="footer-wrap__box footer-wrap_arrow">
+                    <a href="#" id="scroller"></a>
+                </div>
+                <div class="footer-wrap__box">
+                    <a href="#" class="cookie">Политика Cookies</a>
+                    <a href="#" class="regulations">Правила пользования</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
