--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,7 @@
 					<table class="plans-table__wrap">
 						<tr>
 							<td>
-								<table class="table-description">
+								<table class="table-main table-description">
 									<thead>
 										<tr>
 											<th class="table-description__cell-heading table-description__cell-heading_empty">
@@ -106,65 +106,61 @@
 											</th>
 										</tr>
 									</thead>
-									<tbody class="table-main">
-										<tr>
-											<td class="table-main__cell table-description__cell-main">
-												Contacts in database
-												<a href="#"></a>
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-description__cell-main">
-												Contacts import
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-description__cell-main">
-												Contacts custom fields*
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-description__cell-main">
-												Advanced cleanup features*
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-description__cell-main">
-												Contacts history
-											</td>
-										</tr>
-										<tr>
-											<th class="table-main__cell table-main__cell_empty table-description__cell-main table-description__cell-heading">
-												Messaging
-											</th>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-description__cell-main">
-												SMS sending management
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-description__cell-main">
-												Alphanumeric sender ID**
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-description__cell-main">
-												SMS templates*
-											</td>
-										</tr>
-										<tbody>
-											<tfoot>
-												<tr>
-													<td class="table-description__cell-footer">
-														Try any plan for 30 days for free (no credit card required)
-													</td>
-												</tr>
-											</tfoot>
+									<tr>
+										<td class="table-main__cell table-description__cell-main">
+											Contacts in database
+											<a href="#"></a>
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-description__cell-main">
+											Contacts import
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-description__cell-main">
+											Contacts custom fields*
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-description__cell-main">
+											Advanced cleanup features*
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-description__cell-main">
+											Contacts history
+										</td>
+									</tr>
+									<tr>
+										<th class="table-main__cell table-main__cell_empty table-description__cell-main table-description__cell-heading">
+											Messaging
+										</th>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-description__cell-main">
+											SMS sending management
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-description__cell-main">
+											Alphanumeric sender ID**
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-description__cell-main">
+											SMS templates*
+										</td>
+									</tr>
+									<tr>
+										<td class="table-description__cell-footer">
+											Try any plan for 30 days for free (no credit card required)
+										</td>
+									</tr>
 								</table>
 							</td>
 							<td>
-								<table class="table-plans-price">
+								<table class="table-main table-plans-price">
 									<thead>
 										<tr>
 											<td class="table-plans-price__heading rate-heading rate-heading_free">
@@ -185,58 +181,54 @@
 											</td>
 										</tr>
 									</thead>
-									<tbody class="table-main">
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												unlimited
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												3
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main table-plans-price__main_icon-no"></td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												1 year
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-main__cell_empty table-plans-price__main">
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											unlimited
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											3
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main table-plans-price__main_icon-no"></td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											1 year
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-main__cell_empty table-plans-price__main">
 
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												10
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												10
-											</td>
-										</tr>
-									</tbody>
-									<tfoot>
-										<tr>
-											<td class="table-plans-price__footer">
-												<a class="btn" href="#">Try it free</a>
-											</td>
-										</tr>
-									</tfoot>
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											10
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											10
+										</td>
+									</tr>
+									<tr>
+										<td class="table-plans-price__footer">
+											<a class="btn" href="#">Try it free</a>
+										</td>
+									</tr>
 								</table>
 							</td>
 							<td>
-								<table class="table-plans-price">
+								<table class="table-main table-plans-price">
 									<thead>
 										<tr>
 											<td class="table-plans-price__heading rate-heading  rate-heading_smart">
@@ -263,58 +255,54 @@
 											</td>
 										</tr>
 									</thead>
-									<tbody class="table-main">
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												unlimited
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												10
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												3 year
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-main__cell_empty table-plans-price__main">
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											unlimited
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											10
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											3 year
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-main__cell_empty table-plans-price__main">
 
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												50
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												50
-											</td>
-										</tr>
-									</tbody>
-									<tfoot>
-										<tr>
-											<td class="table-plans-price__footer">
-												<a class="btn" href="#">Try it free</a>
-											</td>
-										</tr>
-									</tfoot>
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											50
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											50
+										</td>
+									</tr>
+									<tr>
+										<td class="table-plans-price__footer">
+											<a class="btn" href="#">Try it free</a>
+										</td>
+									</tr>
 								</table>
 							</td>
 							<td>
-								<table class="table-plans-price">
+								<table class="table-main table-plans-price">
 									<thead>
 										<tr>
 											<td class="table-plans-price__heading rate-heading  rate-heading_professional">
@@ -341,58 +329,54 @@
 											</td>
 										</tr>
 									</thead>
-									<tbody class="table-main">
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												unlimited
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												30
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												5 year
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-main__cell_empty table-plans-price__main">
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											unlimited
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											30
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											5 year
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-main__cell_empty table-plans-price__main">
 
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												50
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												50
-											</td>
-										</tr>
-									</tbody>
-									<tfoot>
-										<tr>
-											<td class="table-plans-price__footer">
-												<a class="btn" href="#">Try it free</a>
-											</td>
-										</tr>
-									</tfoot>
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											50
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											50
+										</td>
+									</tr>
+									<tr>
+										<td class="table-plans-price__footer">
+											<a class="btn" href="#">Try it free</a>
+										</td>
+									</tr>
 								</table>
 							</td>
 							<td>
-								<table class="table-plans-price">
+								<table class="table-main table-plans-price">
 									<thead>
 										<tr>
 											<td class="table-plans-price__heading rate-heading rate-heading_ultimate">
@@ -410,54 +394,50 @@
 											</td>
 										</tr>
 									</thead>
-									<tbody class="table-main">
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												unlimited
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												unlimited
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												unlimited
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-main__cell_empty table-plans-price__main">
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											unlimited
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											unlimited
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											unlimited
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-main__cell_empty table-plans-price__main">
 
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												unlimited
-											</td>
-										</tr>
-										<tr>
-											<td class="table-main__cell table-plans-price__main">
-												unlimited
-											</td>
-										</tr>
-									</tbody>
-									<tfoot>
-										<tr>
-											<td class="table-plans-price__footer">
-												<a class="btn" href="#">Try it free</a>
-											</td>
-										</tr>
-									</tfoot>
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main table-plans-price__main_icon"></td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											unlimited
+										</td>
+									</tr>
+									<tr>
+										<td class="table-main__cell table-plans-price__main">
+											unlimited
+										</td>
+									</tr>
+									<tr>
+										<td class="table-plans-price__footer">
+											<a class="btn" href="#">Try it free</a>
+										</td>
+									</tr>
 								</table>
 							</td>
 						</tr>
